CMAKE_MINIMUM_REQUIRED(VERSION 3.17)
PROJECT(posix_threads)

SET(CMAKE_CXX_STANDARD 20)

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

ADD_EXECUTABLE(lab1 lab1.cpp)
TARGET_LINK_LIBRARIES(lab1 PRIVATE Threads::Threads)

ADD_EXECUTABLE(lab2 lab2.cpp)
TARGET_LINK_LIBRARIES(lab2 PRIVATE Threads::Threads)

ADD_EXECUTABLE(lab3 lab3.cpp)
TARGET_LINK_LIBRARIES(lab3 PRIVATE Threads::Threads)

ADD_EXECUTABLE(lab4 lab4.cpp lab4/monitor.cpp)
TARGET_INCLUDE_DIRECTORIES(lab4 PRIVATE lab4)
TARGET_LINK_LIBRARIES(lab4 PRIVATE Threads::Threads)

ADD_EXECUTABLE(lab5 lab5.cpp lab5/threadmanager.cpp lab4/monitor.cpp)
TARGET_INCLUDE_DIRECTORIES(lab5 PRIVATE lab5)
TARGET_INCLUDE_DIRECTORIES(lab5 PRIVATE lab4)
TARGET_LINK_LIBRARIES(lab5 PRIVATE Threads::Threads)